User details Page alignment UI fixed

--- a/participant-manager/src/assets/css/forms.scss
+++ b/participant-manager/src/assets/css/forms.scss
@@ -128,7 +128,7 @@
     position: relative;
     padding-left: 25px;
     cursor: pointer;
-    display: inline-block;
+    display: inline;
     color: var(--stone-gray);
     margin-right: 10px;
     font-size: 75%;
